the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-08-31] RFC4880: added support for EdDSA (algorithm 22) from RFC 4880bis
* [2018-08-28] RFC4880: added AccumulateRevocationCodes()
* [2018-08-28] RFC4880: added tmcg_openpgp_revcode_t
* [2018-08-24] RFC4880: added types and parameters for Notation Data
* [2018-08-23] RFC4880: added StandaloneHash[V3]() and PacketBodyExtract()
* [2018-08-23] RFC4880: added PacketSigPrepareTimestampSignature()
* [2018-08-22] RFC4880: reorder preferred hash algorithms by hash length
* [2018-08-22] RFC4880: added support for creating Issuer Fingerprint subpacket
* [2018-08-18] RFC4880: added list() for TMCG_OpenPGP_Keyring
* [2018-08-17] RFC4880: added types and functions for use of secure memory
* [2018-08-16] init_libTMCG(): added parameter to enforce use of secure memory
* [2018-08-15] RFC4880: added Asymmetric[De|En]cryptECDH() from RFC 6637
* [2018-08-11] RFC4880: added support for verifying text document signatures
* [2018-08-09] RFC4880: added Issuer Fingerprint subpacket from RFC 4880bis-04
* [2018-08-09] RFC4880: added Export() for TMCG_OpenPGP_Pubkey
* [2018-08-09] RFC4880: added new interfaces for TMCG_OpenPGP_Keyring
* [2018-08-05] RFC4880: changed parsing strategy in MessageParse()
* [2018-08-05] RFC4880: small fixes in ArmorDecode() and PacketLengthDecode()
* [2018-07-14] RFC4880: added ECC algorithms 18 and 19 from RFC 6637
* [2018-06-24] release 1.3.13 of LibTMCG
* [2018-06-23] mpz_sprime: avoid waste of good random numbers
* [2018-06-22] RFC4880: added tmcg_openpgp_stringtokey_t
* [2018-06-21] RFC4880: added AlgorithmHashTextName(), DashEscapeFile()
* [2018-06-19] RFC4880: added some stuff for cleartext signature framework